# gdriver2

./: .gitignore  Cargo.toml  concept.md
gdriver-backend/: Cargo.toml
gdriver-backend/src/: drive.rs  main.rs  path_resolver.rs  prelude.rs  sample.rs  service.rs
gdriver-backend/src/drive/: google_drive.rs  macros.rs
gdriver-client/: Cargo.toml
gdriver-client/src/: filesystem.rs  main.rs  prelude.rs  sample.rs  service.rs
gdriver-client/src/filesystem/: attributes.rs  macros.rs
gdriver-common/: Cargo.toml
gdriver-common/src/: config.rs  drive_structure.rs  ipc.rs  lib.rs  path_resolve_error.rs  prelude.rs  project_dirs.rs  time_utils.rs  tracing_setup.rs
gdriver-common/src/drive_structure/: drive_id.rs  meta.rs
gdriver-common/src/ipc/: gdriver_service.rs  gdriver_settings.rs
