[package]
name = "gdriver-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser={ version = "0.14", default_features = true, features = ["serializable"] }
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
tarpc.workspace = true
futures.workspace = true
chrono.workspace = true

[dependencies.gdriver-common]
path = "../gdriver-common/"
