[package]
name = "gdriver-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc.workspace = true
tokio.workspace = true
futures-sink = "0.3.30"

[dependencies.gdriver-common]
path = "../gdriver-common/"
