[package]
name = "gdriver-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
lazy_static.workspace = true
anyhow = "1.0"
futures-sink = "0.3.30"
fuser = "0.14.0"
bimap = "0.6"
libc = "0.2.152"
futures = "0.3"
thiserror = "1.0.56"
uzers = "0.11"

[dependencies.gdriver-common]
path = "../gdriver-common"
