[package]
name = "gdriver-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
tarpc.workspace = true
tokio.workspace = true
futures.workspace = true
lazy_static.workspace = true
confique={ version = "0.2" }
thiserror = "1.0"
anyhow = "1.0.79"
directories = "5.0"
serde_json = "1.0.111"
#[patch.crates-io]
#confique = {path="~/Documents/git/OMGeeky/confique "}
